@@ -4,6 +4,9 @@ import trajtracker
 # noinspection PyProtectedMember
 import trajtracker._utils as _u
 
+from expyriment.misc.geometry import XYPoint
+
+
 from trajtracker import BadFormatError
 
 
@@ -21,6 +24,27 @@ class _UtilsTests(unittest.TestCase):
         self.assertRaises(trajtracker.ValueError, lambda: _u.parse_coord('(x,2)'))
         self.assertRaises(trajtracker.ValueError, lambda: _u.parse_coord('(,2)'))
         self.assertRaises(trajtracker.ValueError, lambda: _u.parse_coord('(2,)'))
+
+    #------------------------------------------------------------------------------
+    def test_is_coord_int(self):
+        self.assertEqual(True, _u.is_coord((5, 4)))
+        self.assertEqual(True, _u.is_coord([5, 4]))
+        self.assertEqual(True, _u.is_coord(XYPoint(5, 4)))
+
+    def test_is_coord_float(self):
+        self.assertEqual(True, _u.is_coord((5.0, 4.0)))
+        self.assertEqual(True, _u.is_coord([5.0, 4.0]))
+        self.assertEqual(True, _u.is_coord(XYPoint(5.0, 4.0)))
+
+    def test_is_coord_float_not_allowed(self):
+        self.assertEqual(False, _u.is_coord((5.1, 4.1)))
+        self.assertEqual(False, _u.is_coord([5.1, 4.1]))
+        self.assertEqual(True, _u.is_coord(XYPoint(5.1, 4.1)))
+
+    def test_is_coord_float_allowed(self):
+        self.assertEqual(True, _u.is_coord((5.1, 4.1), allow_float=True))
+        self.assertEqual(True, _u.is_coord([5.1, 4.1], allow_float=True))
+        self.assertEqual(True, _u.is_coord(XYPoint(5.1, 4.1), allow_float=True))
 
 
 
