@@ -1,6 +1,8 @@
 Version 1.2
 ===========
 - Hotspot: added properties name, enabled
+- Hotspot - fixed a bug in reset(): some data was not reset, causing clicks to be sometimes missed.
+- x/y coordinates had to be of type int; now they can also be whole-number float values (e.g., 20.0)
 
 Version 1.1.2
 =============
